# CoolChunkCollection

./: .gitignore  README.md
mc-server-mod/: build.gradle  gradle.properties
mc-server-mod/.idea-OLD/runConfigurations/: Minecraft_Client.xml  Minecraft_Server.xml
mc-server-mod/src/main/java/net/fabricmc/example/: NFTMod.java
mc-server-mod/src/main/resources/: fabric.mod.json
web-server/: Cargo.toml  transaction.html
web-server/src/: main.rs
web-server/static/: index.html  transaction.js
