[package]
name = "CCC-web-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.1", features=["json"] }
serde_json = "1.0.67"
serde = "1.0.130"
rand = "0.8.4"
ethereum-types = "0.12.0"
